# cursed-usb-switch

./: .gitignore  pyproject.toml
extra-symbols/HD3SS3212IRKSR/ul_HD3SS3212IRKSR/KiCADv6/: 2024-03-14_17-33-28.kicad_sym
extra-symbols/HD3SS3212IRKSR/ul_HD3SS3212IRKSR/KiCADv6/footprints.pretty/: RKS0020A.kicad_mod
extra-symbols/HD3SS3412RUAR/KiCADv6/: 2024-03-15_04-10-31.kicad_sym
extra-symbols/HD3SS3412RUAR/KiCADv6/footprints.pretty/: RUA0042A.kicad_mod
extra-symbols/max4999/: 21-0140_T32554_MXM.step  21-0140_T32554_MXM.stl
extra-symbols/max4999/KiCADv6/: 2024-03-15_03-11-08.kicad_sym
extra-symbols/max4999/KiCADv6/footprints.pretty/: 21-0140_T3255&plus_4_MXM-L.kicad_mod  21-0140_T3255&plus_4_MXM-M.kicad_mod  21-0140_T3255&plus_4_MXM.kicad_mod
extra-symbols/tusb8043a/ul_TUSB8043AIRGCR/KiCADv6/: 2024-03-14_17-12-34.kicad_sym
extra-symbols/tusb8043a/ul_TUSB8043AIRGCR/KiCADv6/footprints.pretty/: VQFN64_RGC_TEX-L.kicad_mod  VQFN64_RGC_TEX-M.kicad_mod  VQFN64_RGC_TEX.kicad_mod
usb-switch/: downstream_port.kicad_sch  fp-info-cache  project-library.bak  project-library.kicad_sym  sym-lib-table  upstream_port.kicad_sch  usb-switch.csv  usb-switch.kicad_pcb  usb-switch.kicad_prl  usb-switch.kicad_pro  usb-switch.kicad_sch  usb-switch.xml
usb-switch/Library.pretty/: 21-0140_T3255+4_MXM.kicad_mod  RKS0020A.kicad_mod  RUA0042A.kicad_mod  VQFN64_RGC_TEX.kicad_mod
