[tool.poetry]
name = "usbswitch"
version = "0.1.0"
description = ""
authors = ["Paweł Lasek <pawel.lasek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.8"
circuitsascode = "^0.0.2"
ipython = "^8.22.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
